<resources>
    <string name="app_name">Multimidia e Conexao</string>
    <string name="recuperando_fotos_com_imageview">Recuperando fotos com ImageView</string>
    <string name="utilizando_mapview">Utilizando mapas: MapView</string>
    <string name="location_api">Localização do usuário com Location API</string>
    <string name="rotas">Rotas</string>
    <string name="pontos_interesse">Pontos Interesse</string>
    <string name="usando_webview">Usando WebView em seus Apps</string>
    <string name="som">Sons:AudioManager</string>
    <string name="video">Vídeos: MediaPlayer</string>
    <string name="animacao">Animação em views com View Animation</string>
    <string name="fiap_on">Fiap On</string>
    <string name="content_dscription_leao">Leão</string>
    <string name="content_dscription_Pinguin">Pinguin</string>
    <string name="content_dscription_urso">Urso</string>
    <string name="content_dscription_girafa">Girafa</string>
    <string name="content_dscription_tigre">Tigre</string>
    <string name="content_dscription_rato">Rato</string>
    <string name="content_dscription_cow">Toque na Cow</string>
    <string name="content_dscription_dog">Toque no Dog</string>
    <string name="toque_no_animal">Toque na imagem do animal!!!</string>
</resources>
